# ntpsample

./: .clang-format  .gitignore  BENCHMARK.md  CMakeLists.txt  README.md  README_ja.md  benchmark_performance.sh  measure_memory.sh
cmake/: ClangFormat.cmake  Cpplint.cmake  FetchGTest.cmake
csharp/: NtpSample.sln  README.md  README_ja.md
csharp/NtpClock/: ClockService.cs  NtpClock.csproj
csharp/NtpClock.Tests/: ClockCorrectorTests.cs  ClockServiceTests.cs  NtpClock.Tests.csproj  OptionsTests.cs  StatusTests.cs  SyncEstimatorStateTests.cs  VendorHintProcessorTests.cs
csharp/NtpClock/Internal/: ClockCorrector.cs  Options.cs  Status.cs  SyncEstimatorState.cs  UdpSocket.cs  VendorHintProcessor.cs
csharp/NtpClockExample/: NtpClockExample.csproj  Program.cs
csharp/NtpClockGateway/: NtpClockGateway.csproj  Program.cs
csharp/NtpClockGatway/: NtpClockGatway.csproj  Program.cs
csharp/NtpServer/: NtpServer.cs  NtpServer.csproj
csharp/NtpServer.Tests/: ClientTrackerTests.cs  NtpServer.Tests.csproj  NtpServerTests.cs  NtpTypesTests.cs  StopwatchClockTests.cs  TimeSpecTests.cs
csharp/NtpServer/Internal/: ByteOrderHelper.cs  ClientTracker.cs  ITimeSource.cs  NtpTypes.cs  Options.cs  ServerStats.cs  StopwatchClock.cs  TimeSpec.cs
csharp/NtpServerExample/: NtpServerExample.csproj  Program.cs
ntpclient/: CMakeLists.txt
ntpclient/example/: example_main.cc
ntpclient/include/ntpclient/: .ntp_client.hpp.swp  ntp_client.hpp
ntpclient/src/: ntp_client.cc
ntpclient/tests/: ntp_client_test.cc
ntpclock/: CMakeLists.txt
ntpclock/example/: example_main.cc  gateway_main.cc
ntpclock/include/ntpclock/: clock_service.hpp
ntpclock/src/: clock_service.cc
ntpclock/src/internal/: clock_correction_policy.hpp  clock_corrector.cc  clock_corrector.hpp  monotonicity_guard.hpp  ntp_client.hpp  offset_estimator.hpp  skew_estimator.hpp  step_inhibitor.hpp  sync_estimator_state.cc  sync_estimator_state.hpp  udp_socket.cc  udp_socket.cpp  udp_socket.hpp  vendor_hint_processor.cc  vendor_hint_processor.hpp
ntpclock/tests/: clock_service_test.cc
ntpserver/: CMakeLists.txt
ntpserver/example/: example_main.cc
ntpserver/include/ntpserver/: export.hpp  monotonic_clock.hpp  ntp_extension.hpp  ntp_server.hpp  ntp_types.hpp  qpc_clock.hpp  time_source.hpp  time_spec.hpp  user_time.hpp
ntpserver/include/ntpserver/platform/: default_time_source.hpp  socket_interface.hpp
ntpserver/src/: ntp_extension.cc  ntp_server.cc  ntp_server_options.cc  ntp_types.cc  qpc_clock.cc  time_spec.cc  user_time.cc
ntpserver/src/internal/: client_tracker.hpp
ntpserver/src/platform/common/: socket_utils.hpp
ntpserver/src/platform/posix/: default_time_source.cc  monotonic_clock.cc  socket_posix.cc
ntpserver/src/platform/win32/: default_time_source.cc  socket_win32.cc
ntpserver/tests/: ntp_extension_test.cc  ntp_server_test.cc  time_spec_test.cc
